# Eight-Queen-Puzzle

./: CMakeLists.txt  README.md  main.cpp  resources.qrc
views/: Background.cpp  Background.h  Button.cpp  Button.h  ChessBoard.cpp  ChessBoard.h  Label.cpp  Label.h  Queen.cpp  Queen.h  StartBackground.cpp  StartBackground.h
windows/: Board.cpp  Board.h  ChessBoard.cpp  ChessBoard.h  Start.cpp  Start.h
